fix: various jvm24 native-flag fixes
Signed-off-by: Sam Gammon <sam@elide.dev>